--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<h>
-  wellcome
-</h>
-<h>
-  hello dothao
-</h>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <a href="https://www.is.vnu.edu.vn/">https://www.is.vnu.edu.vn/</a>
+</body>
+</html>
