--- a/hw5.html
+++ b/hw5.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>Left menu</title>
-<link rel="stylesheet" type="text/css" href="css/LeftMenu.css" />
+<link
+href="LeftMenu.css"
+rel="stylesheet"
+/>
 </head>
 <body>
 <div class="menu">
